# fred-haskell

./: LICENSE  README.md  Setup.hs  fred-haskell.cabal  stack.yaml
src/: Combinators.hs  DateTime.hs  FRED.hs  FREDValue.hs  GenericCombinators.hs  Main.hs  Number.hs
src/FRED/: Parser.hs  Value.hs
src/FRED/Parser/: Boolean.hs  DateTime.hs  Number.hs  String.hs
test/: FredSpec.hs
test/Property/: Property.hs
test/Spec/: FredSpec.hs
