name:                fred-haskell
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/fred-format/fred-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Matheus de Sousa Bernardo
maintainer:          matheussbernardo@gmail.com
copyright:           2019 Matheus de Sousa Bernardo
category:            Parser
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fred-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  parsec 
  other-modules:       Combinators
