name:                fred-haskell
version:             0.1.1.2
synopsis:            Implementation of Fred in Haskell
description:         Fred (Flexible REpresentation of Data) is a data-interchange format.
                     It was created with the goal to be easy for humans to read and write
                     but also easy to create parsers. It has more data types than JSON
                     and some features like support for metadata and tags.
                     .
                     fred-haskell is implemented  using parsec.
                     .
                     The entry point is the "Fred" module which provides
                     a function to parse Fred Text.
                     
homepage:            https://github.com/fred-format/fred-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Matheus de Sousa Bernardo <matheussbernardo@gmail.com>
maintainer:          Matheus de Sousa Bernardo <matheussbernardo@gmail.com>
copyright:           2019 Matheus de Sousa Bernardo
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
    type: git
    location: https://github.com/fred-format/fred-haskell

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring   >= 0.10.8 && < 0.11,
                       parsec       >= 3.1.13 && < 3.2,
                       time         >= 1.9.0 && < 1.9.3
  exposed-modules:     Fred
                    ,  Fred.Value
  other-modules:       Fred.Parser
                    ,  Fred.Parser.String
                    ,  Fred.Parser.Number
                    ,  Fred.Parser.DateTime
                    ,  Fred.Parser.Boolean

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test/Spec
  build-depends:
      base ==4.*
    , hspec ==2.*
    , fred-haskell
    , hedgehog
    , strict
    , text
    , vector
    , unordered-containers
    , bytestring
    , aeson
    , aeson-pretty
    , directory
    , process
    
  other-modules: FredSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*

test-suite property
  type: exitcode-stdio-1.0
  main-is: property.hs
  hs-source-dirs:
      test/Property
  build-depends:
      base ==4.*
    , fred-haskell
    , bytestring
    , hedgehog
    , time
  default-language: Haskell2010